Attempt to fix headers alignment

--- a/web_external/stylesheets/widgets/tableWidget.styl
+++ b/web_external/stylesheets/widgets/tableWidget.styl
@@ -1,6 +1,9 @@
 .m.table-main-container
     width 95%
 
+.dataTable-width
+    width 100% !important
+
 #data_wrapper
     padding 15px
 
